# cs2tracker

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE.md  Makefile  OutputToPlot.py  README.md  config.ini  csgotrack.py  csgotracker.py  plot.py  pyproject.toml  requirements.txt  scraper.py  setup.cfg  setup.iss
.github/workflows/: executables.yml  pyinstaller.yml  pylint.yml  pypi.yml  release.yml
cs2tracker/: __main__.py  application.py  background_task.py  config.py  constants.py  discord_notifier.py  logs.py  main.py  scraper.py  validated_config.py
cs2tracker/app/: __init__.py  app.py  application.py  editor_frame.py  history_frame.py  scraper_frame.py
cs2tracker/data/: config.ini  convert_inventory.js  get_inventory.js  output.csv  translations.json
cs2tracker/data/itemsBackupFiles/: Attribution.md  csgo_english.json
cs2tracker/scraper/: __init__.py  background_task.py  discord_notifier.py  parser.py  parsers.py  scraper.py  steam_parser.py
cs2tracker/util/: __init__.py  currency_conversion.py  padded_console.py  price_logs.py  tkinter.py  validated_config.py
csgotracker/: main.py
data/: config.ini
src/: __main__.py  application.py  constants.py  csgotracker.py  main.py  plot.py  scraper.py
