[build-system]
requires = ["setuptools>=67", "setuptools_scm[toml] >= 6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "cs2tracker/_version.py"

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.black]
line_length = 100

[tool.docformatter]
black = true
close-quotes-on-newline = true
pre-summary-newline = true

[tool.interrogate]
ignore-init-module = true
ignore-module = true
exclude = ["data", "bin"]
