[metadata]
name = csgotracker
version = 0.0.1
description = Tracking the steam market prices of CS:GO items
author = Jannik Novak
author_email = nevisha@pm.me
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ashiven/csgotracker
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
setup_requires = setuptools_scm
install_requires=
    beautifulsoup4==4.11.1
    CurrencyConverter==0.17.9
    matplotlib==3.7.0
    Requests==2.31.0
    rich==13.6.0
    tenacity==8.2.2
    urllib3==2.1.0

[options.entry_points]
console_scripts =
    csogtracker = csgotracker.__main__:entry_point
