[metadata]
name = cs2tracker
version = attr: cs2tracker.VERSION
description = Tracking the steam market prices of CS2 items
author = Jannik Novak
author_email = nevisha@pm.me
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ashiven/cs2tracker
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
setup_requires = setuptools_scm
include_package_data = True
install_requires=
    numpy==1.26.4
    beautifulsoup4==4.11.1
    CurrencyConverter==0.17.9
    matplotlib==3.7.0
    Requests==2.31.0
    rich==13.6.0
    tenacity==8.2.2
    urllib3==2.1.0

[options.entry_points]
console_scripts =
    cs2tracker = cs2tracker.__main__:entry_point
